--- a/templates/push.html
+++ b/templates/push.html
@@ -98,7 +98,7 @@
             key = k.value
         }
 
-        $.post('http://127.0.0.1:2222/pushAll', {text: text, key: key , push:"{{ .push }}"}, function (data) {
+        $.post('http://'+ {{ .host }} +'/pushAll', {text: text, key: key , push:"{{ .push }}"}, function (data) {
         }).success(function () { alert("發送成功") })
             .error(function() { alert("發送失敗") });
     }
