--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<div class="container">
+<div class="container theme-showcase" role="main">
 
     <!-- Static navbar -->
     <nav class="navbar navbar-default">
@@ -47,9 +47,16 @@
         </div><!--/.container-fluid -->
     </nav>
 
+    <div class="jumbotron">
+        <h1>功能說明</h1>
+        <p>1. 單房間推送，根據房間id,分類,標籤</p>
+        <p>2. 多房間推送，根據房間分類,標籤</p>
+        <p>3. 動態新增房間</p>
+        <p>4. 沒有歷史紀錄(不保存任何資料)</p>
+    </div>
+
     <!-- Example row of columns -->
     <div class="row">
-
         {{ range . }}
         <div class="col-md-4">
             <h2>{{ .Title }}</h2>
