--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,7 @@
         <p>2. 多房間推送，根據房間分類,標籤</p>
         <p>3. 動態新增房間</p>
         <p>4. 沒有歷史紀錄(不保存任何資料)</p>
+        <p>5. 顯示線上人數(30秒更新一次)</p>
     </div>
 
     <!-- Example row of columns -->
